--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <a href="/">WebStudio</a>
 
@@ -18,17 +19,137 @@
 
         <ul>
             <li>
-                <a href="mailto:"><img src="./images/envelope.svg" alt="envelope-sign">info@devstudio.com</a>
+                <a href="mailto:"><img src="./images/link-icons/envelope.svg" alt="envelope-sign">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+"><img src="./images/smartphone.svg" alt="smartfone-sign">+38 096 111 11 11</a>
+                <a href="tel:+"><img src="./images/link-icons/smartphone.svg" alt="smartfone-sign">+38 096 111 11 11</a>
             </li>
         </ul>
        </nav>
     </header>
-
+    <!-- Main section -->
+    <div>
+        <section>
+            <h1>Эффективные решения </br>
+                 для вашего бизнеса</h1>
+            <a href="">Заказать услугу</a>
+        </section>
+    </div>
+    <!-- Information about the project -->
     <section>
-
+        <div>
+            <ul>
+                <li>
+                    <img src="./images/about-company/Vector.svg" alt="">
+                    <h3 lang="ru">Внимание к деталям</h3>
+                    <p lang="ru">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <img src="./images/about-company/Vector-2.svg" alt="">
+                    <h3 lang="ru">Пунктуальность</h3>
+                    <p lang="ru">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <img src="./images/about-company/Vector-3.svg" alt="">
+                    <h3 lang="ru">Планирование</h3>
+                    <p lang="ru">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <img src="./images/about-company/Vector-4.svg" alt="">
+                    <h3 lang="ru">Современные технологии</h3>
+                    <p lang="ru">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+    
+            <h2 lang="ru">Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/about-company/img.png" alt="">
+                    <a href=""><h3 lang="ru">Десктопные приложения</h3></a>
+                </li>
+                <li>
+                    <img src="./images/about-company/box.png" alt="">
+                    <a href=""><h3 lang="ru">Мобильные приложения</h3></a>
+                </li>
+                <li>
+                    <img src="./images/about-company/img-2.png" alt="">
+                    <a href=""><h3 lang="ru">Дизайнерские решения</h3></a>
+                </li>
+            </ul>
+        </div>
     </section>
+    <!-- Our team -->
+    <section>
+        <h2 lang="ru">Наша команда</h2>
+        <ul>
+            <li>
+                <img src="./images/team-photos/smith.jpg" alt="">
+                <p>John Smith</p>
+                <p>Product Designer</p>
+                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
+                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
+                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
+                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+            </li>
+            <li>
+                <img src="./images/team-photos/stewart.jpg" alt="">
+                <p>Marta Stewart</p>
+                <p>Frontend Developer</p>
+                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
+                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
+                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
+                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+            </li>
+            <li>
+                <img src="./images/team-photos/jakis.jpg" alt="">
+                <p>Robert Jakis</p>
+                <p>Marketing</p>
+                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
+                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
+                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
+                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+            </li>
+            <li>
+                <img src="./images/team-photos/doe.jpg" alt="">
+                <p>Martin Doe</p>
+                <p>UI Designer</p>
+                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
+                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
+                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
+                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+            </li>
+            
+        </ul>
+    </section>
+    <!-- Our clients -->
+    <section>
+        <h2 lang="ru">Постоянные клиенты</h2>
+        <ul>
+            <li>
+                <img src="./images/clients/ya&co.svg" alt="">
+            </li>
+            <li>
+                <img src="./images/clients/company-tagline.svg" alt="">
+            </li>
+            <li>
+                <img src="./images/clients/company.svg" alt="">
+            </li>
+            <li>
+                <img src="./images/clients/foster-peters.svg" alt="">
+            </li>
+            <li>
+                <img src="./images/clients/brand.svg" alt="">
+            </li>
+            <li>
+                <img src="./images/clients/company-cube.svg" alt="">
+            </li>
+        </ul>
+    </section>
+    <!-- Footer -->
+    <footer>
+
+    </footer>
+
+
 </body>
 </html>
