--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Main section -->
     <div>
         <section>
-            <h1>Эффективные решения </br>
+            <h1>Эффективные решения <br />
                  для вашего бизнеса</h1>
             <a href="">Заказать услугу</a>
         </section>
