--- a/index.html
+++ b/index.html
@@ -86,37 +86,37 @@
                 <img src="./images/team-photos/smith.jpg" alt="">
                 <p>John Smith</p>
                 <p>Product Designer</p>
-                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
-                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
-                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
-                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
             </li>
             <li>
                 <img src="./images/team-photos/stewart.jpg" alt="">
                 <p>Marta Stewart</p>
                 <p>Frontend Developer</p>
-                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
-                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
-                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
-                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
             </li>
             <li>
                 <img src="./images/team-photos/jakis.jpg" alt="">
                 <p>Robert Jakis</p>
                 <p>Marketing</p>
-                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
-                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
-                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
-                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
             </li>
             <li>
                 <img src="./images/team-photos/doe.jpg" alt="">
                 <p>Martin Doe</p>
                 <p>UI Designer</p>
-                <img src="./images/social-links-icons/instagram.svg" alt="instagram-icon">
-                <img src="./images/social-links-icons/twitter.svg" alt="twitter-icon">
-                <img src="./images/social-links-icons/facebook.svg" alt="facebook-icon">
-                <img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon">
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
             </li>
             
         </ul>
@@ -126,28 +126,49 @@
         <h2 lang="ru">Постоянные клиенты</h2>
         <ul>
             <li>
-                <img src="./images/clients/ya&co.svg" alt="">
+                <a href=""><img src="./images/clients/ya&co.svg" alt=""></a>
             </li>
             <li>
-                <img src="./images/clients/company-tagline.svg" alt="">
+                <a href=""><img src="./images/clients/company-tagline.svg" alt=""></a>
             </li>
             <li>
-                <img src="./images/clients/company.svg" alt="">
+                <a href=""><img src="./images/clients/company.svg" alt=""></a>
             </li>
             <li>
-                <img src="./images/clients/foster-peters.svg" alt="">
+                <a href=""><img src="./images/clients/foster-peters.svg" alt=""></a>
             </li>
             <li>
-                <img src="./images/clients/brand.svg" alt="">
+                <a href=""><img src="./images/clients/brand.svg" alt=""></a>
             </li>
             <li>
-                <img src="./images/clients/company-cube.svg" alt="">
+                <a href=""><img src="./images/clients/company-cube.svg" alt=""></a>
             </li>
         </ul>
     </section>
     <!-- Footer -->
     <footer>
+        <div>
+            <p>WebStudio</p>
+            <address lang="ru">г. Киев, пр-т Леси Украинки, 26</address>
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+        </div>
+        <div>
+            <p lang="ru">присоединяйтесь</p>
+            <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
+            <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
+            <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
+            <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
+        </div>
+        <div>
+            <p lang="ru">подписаться на рассылку</p>
+        </div>
+        <div>
 
+        </div>
+        <div>
+            <p>2020 | Developed by GoIT Students </p>
+        </div>
     </footer>
 
 
