--- a/index.html
+++ b/index.html
@@ -64,16 +64,13 @@
             <h2 lang="ru">Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/about-company/img.png" alt="">
-                    <a href=""><h3 lang="ru">Десктопные приложения</h3></a>
+                    <a href=""><img src="./images/about-company/img.png" alt=""><h3 lang="ru">Десктопные приложения</h3></a>
                 </li>
                 <li>
-                    <img src="./images/about-company/box.png" alt="">
-                    <a href=""><h3 lang="ru">Мобильные приложения</h3></a>
+                    <a href=""><img src="./images/about-company/box.png" alt=""><h3 lang="ru">Мобильные приложения</h3></a>
                 </li>
                 <li>
-                    <img src="./images/about-company/img-2.png" alt="">
-                    <a href=""><h3 lang="ru">Дизайнерские решения</h3></a>
+                    <a href=""><img src="./images/about-company/img-2.png" alt=""><h3 lang="ru">Дизайнерские решения</h3></a>
                 </li>
             </ul>
         </div>
