Исправления по рекомендации ментора 1
-изменил формат номера телефона
-изменил параметры основного атрибута  lang, и добавил lang-en где необходимо

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +8,13 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="/">WebStudio</a>
+        <a href="/" lang="en">WebStudio</a>
 
        <nav>
         <ul>
-            <li><a href="" lang="ru">Студия</a></li>
-            <li><a href="" lang="ru">Портфолио</a></li>
-            <li><a href="" lang="ru">Контакты</a></li>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
         </ul>
 
         <ul>
@@ -41,48 +41,48 @@
             <ul>
                 <li>
                     <img src="./images/about-company/Vector.svg" alt="">
-                    <h3 lang="ru">Внимание к деталям</h3>
-                    <p lang="ru">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <img src="./images/about-company/Vector-2.svg" alt="">
-                    <h3 lang="ru">Пунктуальность</h3>
-                    <p lang="ru">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <img src="./images/about-company/Vector-3.svg" alt="">
-                    <h3 lang="ru">Планирование</h3>
-                    <p lang="ru">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <img src="./images/about-company/Vector-4.svg" alt="">
-                    <h3 lang="ru">Современные технологии</h3>
-                    <p lang="ru">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
     
-            <h2 lang="ru">Чем мы занимаемся</h2>
+            <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <a href=""><img src="./images/about-company/img.png" alt=""><h3 lang="ru">Десктопные приложения</h3></a>
+                    <a href=""><img src="./images/about-company/img.png" alt=""><h3>Десктопные приложения</h3></a>
                 </li>
                 <li>
-                    <a href=""><img src="./images/about-company/box.png" alt=""><h3 lang="ru">Мобильные приложения</h3></a>
+                    <a href=""><img src="./images/about-company/box.png" alt=""><h3>Мобильные приложения</h3></a>
                 </li>
                 <li>
-                    <a href=""><img src="./images/about-company/img-2.png" alt=""><h3 lang="ru">Дизайнерские решения</h3></a>
+                    <a href=""><img src="./images/about-company/img-2.png" alt=""><h3>Дизайнерские решения</h3></a>
                 </li>
             </ul>
         </div>
     </section>
     <!-- Our team -->
     <section>
-        <h2 lang="ru">Наша команда</h2>
+        <h2>Наша команда</h2>
         <ul>
             <li>
                 <img src="./images/team-photos/smith.jpg" alt="">
-                <p>John Smith</p>
-                <p>Product Designer</p>
+                <p lang="en">John Smith</p>
+                <p lang="en">Product Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
                 <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
@@ -90,8 +90,8 @@
             </li>
             <li>
                 <img src="./images/team-photos/stewart.jpg" alt="">
-                <p>Marta Stewart</p>
-                <p>Frontend Developer</p>
+                <p lang="en">Marta Stewart</p>
+                <p lang="en">Frontend Developer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
                 <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
@@ -99,8 +99,8 @@
             </li>
             <li>
                 <img src="./images/team-photos/jakis.jpg" alt="">
-                <p>Robert Jakis</p>
-                <p>Marketing</p>
+                <p lang="en">Robert Jakis</p>
+                <p lang="en">Marketing</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
                 <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
@@ -108,8 +108,8 @@
             </li>
             <li>
                 <img src="./images/team-photos/doe.jpg" alt="">
-                <p>Martin Doe</p>
-                <p>UI Designer</p>
+                <p lang="en">Martin Doe</p>
+                <p lang="en">UI Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
                 <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
@@ -120,7 +120,7 @@
     </section>
     <!-- Our clients -->
     <section>
-        <h2 lang="ru">Постоянные клиенты</h2>
+        <h2>Постоянные клиенты</h2>
         <ul>
             <li>
                 <a href=""><img src="./images/clients/ya&co.svg" alt=""></a>
@@ -145,26 +145,26 @@
     <!-- Footer -->
     <footer>
         <div>
-            <p>WebStudio</p>
-            <address lang="ru">г. Киев, пр-т Леси Украинки, 26</address>
+            <p lang="en">WebStudio</p>
+            <address>г. Киев, пр-т Леси Украинки, 26</address>
             <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
         </div>
         <div>
-            <p lang="ru">присоединяйтесь</p>
+            <p>присоединяйтесь</p>
             <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
             <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
             <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
             <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
         </div>
         <div>
-            <p lang="ru">подписаться на рассылку</p>
+            <p>подписаться на рассылку</p>
         </div>
         <div>
 
         </div>
         <div>
-            <p>2020 | Developed by GoIT Students </p>
+            <p lang="en">2020 | Developed by GoIT Students </p>
         </div>
     </footer>
 
