--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
        </nav>
     </header>
     <!-- Main section -->
-    <div>
+    <main>
         <section>
             <h1>Эффективные решения <br />
                  для вашего бизнеса</h1>
             <a href="">Заказать услугу</a>
         </section>
-    </div>
     <!-- Information about the project -->
     <section>
-        <div>
             <ul>
                 <li>
                     <img src="./images/about-company/Vector.svg" alt="">
@@ -73,7 +71,6 @@
                     <a href=""><img src="./images/about-company/img-2.png" alt=""><h3>Дизайнерские решения</h3></a>
                 </li>
             </ul>
-        </div>
     </section>
     <!-- Our team -->
     <section>
@@ -142,6 +139,7 @@
             </li>
         </ul>
     </section>
+    </main>
     <!-- Footer -->
     <footer>
         <div>
