--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
         <ul>
             <li>
-                <a href="mailto:"><img src="./images/link-icons/envelope.svg" alt="envelope-sign">info@devstudio.com</a>
+                <a href="mailto:"><img src="./images/link-icons/envelope.svg" alt="иконка-конверта">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+"><img src="./images/link-icons/smartphone.svg" alt="smartfone-sign">+38 096 111 11 11</a>
+                <a href="tel:+"><img src="./images/link-icons/smartphone.svg" alt="иконка-смартфона">+38 096 111 11 11</a>
             </li>
         </ul>
        </nav>
@@ -38,22 +38,22 @@
     <section>
             <ul>
                 <li>
-                    <img src="./images/about-company/Vector.svg" alt="">
+                    <img src="./images/about-company/Vector.svg" alt="локатор">
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <img src="./images/about-company/Vector-2.svg" alt="">
+                    <img src="./images/about-company/Vector-2.svg" alt="часы">
                     <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <img src="./images/about-company/Vector-3.svg" alt="">
+                    <img src="./images/about-company/Vector-3.svg" alt="ноутбук-с-диаграммой">
                     <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <img src="./images/about-company/Vector-4.svg" alt="">
+                    <img src="./images/about-company/Vector-4.svg" alt="космонавт-стремится-вверх">
                     <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -62,13 +62,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <a href=""><img src="./images/about-company/img.png" alt=""><h3>Десктопные приложения</h3></a>
+                    <a href=""><img src="./images/about-company/img.png" alt="открытый-ноутбук"><h3>Десктопные приложения</h3></a>
                 </li>
                 <li>
-                    <a href=""><img src="./images/about-company/box.png" alt=""><h3>Мобильные приложения</h3></a>
+                    <a href=""><img src="./images/about-company/box.png" alt="смартфон"><h3>Мобильные приложения</h3></a>
                 </li>
                 <li>
-                    <a href=""><img src="./images/about-company/img-2.png" alt=""><h3>Дизайнерские решения</h3></a>
+                    <a href=""><img src="./images/about-company/img-2.png" alt="вид-компьютера-с-рабочим-столом"><h3>Дизайнерские решения</h3></a>
                 </li>
             </ul>
     </section>
@@ -77,40 +77,40 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/team-photos/smith.jpg" alt="">
+                <img src="./images/team-photos/smith.jpg" alt="фото-дизайнера-продукта-Джон-Смит">
                 <p lang="en">John Smith</p>
                 <p lang="en">Product Designer</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/stewart.jpg" alt="">
+                <img src="./images/team-photos/stewart.jpg" alt="фото-разработчика-Марта-Стюарт">
                 <p lang="en">Marta Stewart</p>
                 <p lang="en">Frontend Developer</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/jakis.jpg" alt="">
+                <img src="./images/team-photos/jakis.jpg" alt="фото-специалиста-по-маркетингу-Роберт-Джакис">
                 <p lang="en">Robert Jakis</p>
                 <p lang="en">Marketing</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/doe.jpg" alt="">
+                <img src="./images/team-photos/doe.jpg" alt="фото-дизайнера-Мартин-До">
                 <p lang="en">Martin Doe</p>
                 <p lang="en">UI Designer</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
+                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
+                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
+                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
+                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             
         </ul>
@@ -120,22 +120,22 @@
         <h2>Постоянные клиенты</h2>
         <ul>
             <li>
-                <a href=""><img src="./images/clients/ya&co.svg" alt=""></a>
+                <a href=""><img src="./images/clients/ya&co.svg" alt="иконка-компании"></a>
             </li>
             <li>
-                <a href=""><img src="./images/clients/company-tagline.svg" alt=""></a>
+                <a href=""><img src="./images/clients/company-tagline.svg" alt="иконка-компании"></a>
             </li>
             <li>
-                <a href=""><img src="./images/clients/company.svg" alt=""></a>
+                <a href=""><img src="./images/clients/company.svg" alt="иконка-компании"></a>
             </li>
             <li>
-                <a href=""><img src="./images/clients/foster-peters.svg" alt=""></a>
+                <a href=""><img src="./images/clients/foster-peters.svg" alt="иконка-компании"></a>
             </li>
             <li>
-                <a href=""><img src="./images/clients/brand.svg" alt=""></a>
+                <a href=""><img src="./images/clients/brand.svg" alt="иконка-компании"></a>
             </li>
             <li>
-                <a href=""><img src="./images/clients/company-cube.svg" alt=""></a>
+                <a href=""><img src="./images/clients/company-cube.svg" alt="иконка-компании"></a>
             </li>
         </ul>
     </section>
@@ -150,10 +150,10 @@
         </div>
         <div>
             <p>присоединяйтесь</p>
-            <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="instagram-icon"></a>
-            <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="twitter-icon"></a>
-            <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="facebook-icon"></a>
-            <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="linkedin-icon"></a>
+            <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
+            <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
+            <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
+            <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
         </div>
         <div>
             <p>подписаться на рассылку</p>
