--- a/index.html
+++ b/index.html
@@ -58,26 +58,36 @@
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
-    
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <a href=""><img src="./images/about-company/img.png" alt="открытый-ноутбук"><h3>Десктопные приложения</h3></a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/about-company/box.png" alt="смартфон"><h3>Мобильные приложения</h3></a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/about-company/img-2.png" alt="вид-компьютера-с-рабочим-столом"><h3>Дизайнерские решения</h3></a>
-                </li>
-            </ul>
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                    <li>
+                        <a href=""><img src="./images/about-company/img.png" alt="открытый-ноутбук"
+                            width="380px"
+                            height="294px"
+                        ><h3>Десктопные приложения</h3></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/about-company/box.png" alt="смартфон"
+                            width="380px"
+                            height="294px"    
+                        ><h3>Мобильные приложения</h3></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/about-company/img-2.png" alt="вид-компьютера-с-рабочим-столом"
+                            width="380px"
+                            height="294px"    
+                        ><h3>Дизайнерские решения</h3></a>
+                    </li>
+                </ul>
+            </section>
     </section>
     <!-- Our team -->
     <section>
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/team-photos/smith.jpg" alt="фото-дизайнера-продукта-Джон-Смит">
+                <img src="./images/team-photos/smith.jpg" alt="фото-дизайнера-продукта-Джон-Смит" width="278px" height="260px">
                 <p lang="en">John Smith</p>
                 <p lang="en">Product Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
@@ -86,7 +96,7 @@
                 <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/stewart.jpg" alt="фото-разработчика-Марта-Стюарт">
+                <img src="./images/team-photos/stewart.jpg" alt="фото-разработчика-Марта-Стюарт" width="278px" height="260px">
                 <p lang="en">Marta Stewart</p>
                 <p lang="en">Frontend Developer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
@@ -95,7 +105,7 @@
                 <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/jakis.jpg" alt="фото-специалиста-по-маркетингу-Роберт-Джакис">
+                <img src="./images/team-photos/jakis.jpg" alt="фото-специалиста-по-маркетингу-Роберт-Джакис" width="278px" height="260px">
                 <p lang="en">Robert Jakis</p>
                 <p lang="en">Marketing</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
@@ -104,7 +114,7 @@
                 <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/doe.jpg" alt="фото-дизайнера-Мартин-До">
+                <img src="./images/team-photos/doe.jpg" alt="фото-дизайнера-Мартин-До" width="278px" height="260px">
                 <p lang="en">Martin Doe</p>
                 <p lang="en">UI Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
