--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <ul>
             <li>
                 <img src="./images/team-photos/smith.jpg" alt="фото-дизайнера-продукта-Джон-Смит" width="278px" height="260px">
-                <p lang="en">John Smith</p>
+                <h3 lang="en">John Smith</h3>
                 <p lang="en">Product Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
@@ -97,7 +97,7 @@
             </li>
             <li>
                 <img src="./images/team-photos/stewart.jpg" alt="фото-разработчика-Марта-Стюарт" width="278px" height="260px">
-                <p lang="en">Marta Stewart</p>
+                <h3 lang="en">Marta Stewart</h3>
                 <p lang="en">Frontend Developer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
@@ -106,7 +106,7 @@
             </li>
             <li>
                 <img src="./images/team-photos/jakis.jpg" alt="фото-специалиста-по-маркетингу-Роберт-Джакис" width="278px" height="260px">
-                <p lang="en">Robert Jakis</p>
+                <h3 lang="en">Robert Jakis</h3>
                 <p lang="en">Marketing</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
@@ -115,7 +115,7 @@
             </li>
             <li>
                 <img src="./images/team-photos/doe.jpg" alt="фото-дизайнера-Мартин-До" width="278px" height="260px">
-                <p lang="en">Martin Doe</p>
+                <h3 lang="en">Martin Doe</h3>
                 <p lang="en">UI Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
                 <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
