--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <!-- Footer -->
     <footer>
         <div>
-            <p lang="en">WebStudio</p>
+            <a href="" lang="en">WebStudio</a>
             <address>г. Киев, пр-т Леси Украинки, 26</address>
             <a href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+380991111111">+38 099 111 11 11</a>
