--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
                 <ul>
                     <li>
                         <a href=""><img src="./images/about-company/img.png" alt="открытый-ноутбук"
-                            width="380px"
-                            height="294px"
+                            width="380"
+                            height="294"
                         ><h3>Десктопные приложения</h3></a>
                     </li>
                     <li>
                         <a href=""><img src="./images/about-company/box.png" alt="смартфон"
-                            width="380px"
-                            height="294px"    
+                            width="380"
+                            height="294"    
                         ><h3>Мобильные приложения</h3></a>
                     </li>
                     <li>
                         <a href=""><img src="./images/about-company/img-2.png" alt="вид-компьютера-с-рабочим-столом"
-                            width="380px"
-                            height="294px"    
+                            width="380"
+                            height="294"    
                         ><h3>Дизайнерские решения</h3></a>
                     </li>
                 </ul>
@@ -87,7 +87,7 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/team-photos/smith.jpg" alt="фото-дизайнера-продукта-Джон-Смит" width="278px" height="260px">
+                <img src="./images/team-photos/smith.jpg" alt="фото-дизайнера-продукта-Джон-Смит" width="278" height="260">
                 <h3 lang="en">John Smith</h3>
                 <p lang="en">Product Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
@@ -96,7 +96,7 @@
                 <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/stewart.jpg" alt="фото-разработчика-Марта-Стюарт" width="278px" height="260px">
+                <img src="./images/team-photos/stewart.jpg" alt="фото-разработчика-Марта-Стюарт" width="278" height="260">
                 <h3 lang="en">Marta Stewart</h3>
                 <p lang="en">Frontend Developer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
@@ -105,7 +105,7 @@
                 <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/jakis.jpg" alt="фото-специалиста-по-маркетингу-Роберт-Джакис" width="278px" height="260px">
+                <img src="./images/team-photos/jakis.jpg" alt="фото-специалиста-по-маркетингу-Роберт-Джакис" width="278" height="260">
                 <h3 lang="en">Robert Jakis</h3>
                 <p lang="en">Marketing</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
@@ -114,7 +114,7 @@
                 <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
             </li>
             <li>
-                <img src="./images/team-photos/doe.jpg" alt="фото-дизайнера-Мартин-До" width="278px" height="260px">
+                <img src="./images/team-photos/doe.jpg" alt="фото-дизайнера-Мартин-До" width="278" height="260">
                 <h3 lang="en">Martin Doe</h3>
                 <p lang="en">UI Designer</p>
                 <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
