--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
     <footer>
         <div>
             <a href="" lang="en">WebStudio</a>
-            <address>г. Киев, пр-т Леси Украинки, 26
+            <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
             <a href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
